# LaboroSIAI2025

./: .gitignore  README.md  byte2png.py  pyproject.toml
notebooks/: 00_slow_program.ipynb  01_numpy_program.ipynb  02_jax_sample.ipynb  03_jax_program.ipynb  04_jax_train_cnn.ipynb  05_jax_predict_cnn.ipynb  10_slow_program.ipynb  10_train_program.ipynb  11_answer_numpy.ipynb  12_answer_jax.ipynb  21_answer_jax_linen.ipynb  21_answer_jax_nnx.ipynb  21_answer_pytorch.ipynb  21_answer_pytorch_cuda_graph.ipynb  22_answer_jax.ipynb  README.md
src/: dataio.py  evaluate.py  visualize.py
weights/: logistic_dict.pkl
