[project]
name = "sandbox-kado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "flax",
    "torchvision",
    "torchinfo",
    "torchmetrics",
    "clu>=0.0.12",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "snakeviz>=2.2.2",
    "tqdm>=4.67.1",
    "torch==2.8.0"
]

[project.optional-dependencies]
gpu = [
    "jax[cuda12]",
]
metal = [
    "jax-metal==0.0.3",
    "jax==0.4.11",
    "jaxlib==0.4.10",
]
cpu = [
    "jax",
]

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "src",
]

[tool.uv.sources]
src = { path = "./src", editable = true }


[tool.uv]
package = true
